--- a/package.json
+++ b/package.json
@@ -9,22 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
+    "expo-web-browser": "~12.3.2",
     "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.6",
+    "react-native-config": "^1.5.1",
     "react-native-feather": "^1.1.2",
-    "react-native-maps": "^1.9.1",
+    "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-native-web": "~0.19.6",
     "react-redux": "^9.0.4"
   },
   "devDependencies": {
