--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "^1.22.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.0.1",
+    "@stripe/stripe-react-native": "^0.37.0",
     "axios": "^1.6.5",
     "expo": "~49.0.15",
+    "expo-location": "^16.5.3",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
     "lodash": "^4.17.21",
